# smith

./: .gitignore  Cargo.toml  README.md
Dynum/: Cargo.toml  README.md
Dynum/src/: lib.rs
smith-codegen/: Cargo.toml  out.rs  out.ts  readme.md  schema.smith  test.sh
smith-codegen/src/: lib.rs  main.rs  out.rs  rustgen.rs  typescriptgen.rs
smith-core/: .gitignore  Cargo.toml  README.md  grammar.pest  inp.schema.bdr
smith-core/src/: generics_engine.rs  lib.rs  parser.rs  resolver.rs  utils.rs
smith-core/src/de/: mod.rs
smith-core/src/ser/: mod.rs  serialize_struct.rs  string_serializer.rs
smith-core/src/smith_serde/: mod.rs
smith-js/: .gitignore  Cargo.toml  readme.md
smith-js/example/: index.html  main.js  schema.smith
smith-js/src/: lib.rs
smith-test/: Cargo.toml  build.rs  example.min.json  schema.smith
smith-test/src/: main.rs  smith_asyncvec.rs
smith-test/src/protos/: schema.proto  schema.rs
smith-webdemo/: Cargo.toml  index.html
