[package]
name = "smith-core"
version = "0.1.0"
edition = "2021"

[lib]
doctest = false

[dependencies]
pest = "2.5.6"
pest_derive = "2.5.6"
Dynum = {path = "../Dynum"}
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-transcode = "1.1.1"
json5 = "0.4.1"
num-traits = "0.2.15"
rayon = "1.7.0"
num_cpus = "1.15.0"
