[package]
name = "smith-js"
version = "0.2.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]
doctest = false

[dependencies]
smith-core = { path = "../smith-core" }

console_error_panic_hook = "0.1.7"
js-sys = "0.3.61"
serde_json = "1.0.94"
wasm-bindgen = "0.2.84"
wee_alloc = "0.4.5"

[profile.release]
opt-level = "z"
lto = true
