[package]
name = "smith-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
smith-core = {path="../smith-core"}
serde = "1.0.160"
byte-unit = "4.0.19"
protobuf = "3.2.0"
serde_json = "1.0.96"
rayon = "1.7.0"


[build-dependencies]
protobuf-codegen = "3.2.0"
protoc-bin-vendored = "3.0.0"

[profile.release]
debug = true
